fixed flex layout issue. #page was aligned center and it was taller than the page so it was cropped from top and bottom. i fixed the bug by giving body and #page the same height, not min-height. i also fiddled with the logo design

--- a/src/index.css
+++ b/src/index.css
@@ -68,14 +68,14 @@
   }
 
   * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
   }
 
   html,
   body {
-    height: 100vh;
+    height: 100dvh;
   }
 
   body {
@@ -91,8 +91,9 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    top: ;
     width: clamp(320px, 100vw, 1440px);
-    min-height: 100vh;
+    height: clamp(0px, 100dvh, 100dvh);
     padding: 0 1rem 0;
   }
 
